--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "purescript": "^0.14.5",
     "purty": "^7.0.0",
     "spago": "^0.20.3"
+  },
+  "dependencies": {
+    "puppeteer": "^13.1.1"
   }
 }
